objects/PJ_ByFor_Administration__c.object
<CustomObject>
    <description>Perrier Jouet Administration</description>
    <fields>
        <fullName>PJ_ByFor_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Media__c</fullName>
        <label>Media</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Brochure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Title__c</fullName>
        <label>Title</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_URL_image__c</fullName>
        <label>URL image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_URL_video__c</fullName>
        <label>URL video</label>
        <type>Url</type>
    </fields>
    <label>PJ By&amp;For Admin</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PJ_ByFor_Title__c</columns>
        <columns>PJ_ByFor_Description__c</columns>
        <columns>PJ_ByFor_Media__c</columns>
        <columns>PJ_ByFor_URL_image__c</columns>
        <columns>PJ_ByFor_URL_video__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ADM-{000}</displayFormat>
        <label>Administration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PJ By&amp;For Admins</pluralLabel>
    <recordTypes>
        <fullName>PJ_ByFor_Brochure</fullName>
        <active>true</active>
        <description>Attachements appears in Perrier-Jouët Key Contact</description>
        <label>Brochure</label>
    </recordTypes>
    <recordTypes>
        <fullName>PJ_ByFor_DocumentRT</fullName>
        <active>true</active>
        <description>Presentation appears in &quot;offer presentation&quot;</description>
        <label>Presentation</label>
    </recordTypes>
    <recordTypes>
        <fullName>PJ_ByFor_VideoRT</fullName>
        <active>true</active>
        <description>Presentation appears in &quot;offer presentation&quot;</description>
        <label>Video</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>